// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Alert Error 1`] = `
<div
  className="border px-5 py-3 bg-opacity-5 flex gap-x-5 pr-8 relative flex-wrap border-error bg-error"
  role="alert"
>
  <h4
    className="font-bold"
  >
    Fehler
  </h4>
  <p>
    Dein Token konnte nicht generiert werden.
    <code
      className="ml-4 px-2 py-1 font-mono bg-error bg-opacity-20"
    >
      500 Server Error
    </code>
  </p>
  <button
    aria-label="Schließen"
    className="text-blue absolute top-2 right-3 transform hover:text-purple transition hover:rotate-180 p-2 rounded-full focus-offset"
    onClick={[Function]}
  >
    <svg
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.387.21a1 1 0 0 1 1.226 0l.094.083L8 6.585 14.293.293l.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l6.292 6.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-6.293 6.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 .293 1.707.21 1.613a1 1 0 0 1 0-1.226L.293.293.387.21Z"
        fill="currentColor"
        fillRule="nonzero"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots UI Elements/Alert Info 1`] = `
<div
  className="border px-5 py-3 bg-opacity-5 flex gap-x-5 pr-8 relative flex-wrap border-blue bg-gray-300"
  role="alert"
>
  <h4
    className="font-bold"
  >
    For your information
  </h4>
  <p>
    You flight will be operated by Luftansa.
    <code
      className="ml-4 px-2 py-1 font-mono text-blue bg-blue bg-opacity-10"
    >
      D24H4J
    </code>
  </p>
  <button
    aria-label="Schließen"
    className="text-blue absolute top-2 right-3 transform hover:text-purple transition hover:rotate-180 p-2 rounded-full focus-offset"
    onClick={[Function]}
  >
    <svg
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.387.21a1 1 0 0 1 1.226 0l.094.083L8 6.585 14.293.293l.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l6.292 6.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-6.293 6.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 .293 1.707.21 1.613a1 1 0 0 1 0-1.226L.293.293.387.21Z"
        fill="currentColor"
        fillRule="nonzero"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots UI Elements/Alert No Title 1`] = `
<div
  className="border px-5 py-3 bg-opacity-5 flex gap-x-5 pr-8 relative flex-wrap border-blue bg-gray-300"
  role="alert"
>
  <p>
    Less is more
  </p>
  <button
    aria-label="Schließen"
    className="text-blue absolute top-2 right-3 transform hover:text-purple transition hover:rotate-180 p-2 rounded-full focus-offset"
    onClick={[Function]}
  >
    <svg
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.387.21a1 1 0 0 1 1.226 0l.094.083L8 6.585 14.293.293l.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l6.292 6.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-6.293 6.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 .293 1.707.21 1.613a1 1 0 0 1 0-1.226L.293.293.387.21Z"
        fill="currentColor"
        fillRule="nonzero"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots UI Elements/Alert Non Removable 1`] = `
<div
  className="border px-5 py-3 bg-opacity-5 flex gap-x-5 pr-8 relative flex-wrap border-warning bg-warning"
  role="alert"
>
  <h4
    className="font-bold"
  >
    Achtung!
  </h4>
  <p>
    This alert should not be removable because it's too important
  </p>
</div>
`;

exports[`Storyshots UI Elements/Alert Success 1`] = `
<div
  className="border px-5 py-3 bg-opacity-5 flex gap-x-5 pr-8 relative flex-wrap border-green bg-green"
  role="alert"
>
  <h4
    className="font-bold"
  >
    Erfolg!
  </h4>
  <p>
    Dein Token wurde erfolgreich angelegt
  </p>
  <button
    aria-label="Schließen"
    className="text-blue absolute top-2 right-3 transform hover:text-purple transition hover:rotate-180 p-2 rounded-full focus-offset"
    onClick={[Function]}
  >
    <svg
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.387.21a1 1 0 0 1 1.226 0l.094.083L8 6.585 14.293.293l.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l6.292 6.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-6.293 6.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 .293 1.707.21 1.613a1 1 0 0 1 0-1.226L.293.293.387.21Z"
        fill="currentColor"
        fillRule="nonzero"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots UI Elements/Alert Warning 1`] = `
<div
  className="border px-5 py-3 bg-opacity-5 flex gap-x-5 pr-8 relative flex-wrap border-warning bg-warning"
  role="alert"
>
  <h4
    className="font-bold"
  >
    Achtung!
  </h4>
  <p>
    Dein Token wird nur einmal angezeigt
  </p>
  <button
    aria-label="Schließen"
    className="text-blue absolute top-2 right-3 transform hover:text-purple transition hover:rotate-180 p-2 rounded-full focus-offset"
    onClick={[Function]}
  >
    <svg
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.387.21a1 1 0 0 1 1.226 0l.094.083L8 6.585 14.293.293l.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l6.292 6.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-6.293 6.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 .293 1.707.21 1.613a1 1 0 0 1 0-1.226L.293.293.387.21Z"
        fill="currentColor"
        fillRule="nonzero"
      />
    </svg>
  </button>
</div>
`;
